API completa v1
